Finished chat service
